--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -6,9 +6,94 @@
     margin-top: 2%;
 }
 
+h1.title-name { 
+    color: #7c795d;
+    font-family: 'Trocchi', serif;
+    font-size: 45px;
+    font-weight: normal;
+    line-height: 48px;
+    margin: 0;
+}
+
+h2.title-card {
+    color: black;
+    transition: .5s;
+    -moz-transition: .5s;
+    -webkit-transition: .5s;
+    -o-transition: .5s;
+    font-family: 'Muli', sans-serif;
+}
+
+h4.title-attr {
+    color: #111;
+    font-family: 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    letter-spacing: -1px;
+    line-height: 1;
+    text-align: center;
+    padding-top: 2%;
+}
+
 img{
     width:100%;
     max-width: 200px;
     min-width: 200px;
     height: auto;
+}
+
+.tab {
+    border-bottom: 2px solid #F5F5F5;
+    border-right: 2px solid #F5F5F5;
+    border-left: 2px solid 	#F5F5F5;
+    box-shadow: 0  8px 16px 0 rgba(0,0,0,0.2);
+    min-height: 300px; 
+}
+
+.box {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-55%, 0, 0);
+    background-color: rgba(#000, 0.5);
+    padding: 5px;
+    border: 2px solid 	#DAA520;
+    min-height: 350px;
+}
+
+.box:before, .box:after {
+    content: "•";
+    position: absolute;
+    width: 14px;
+    height: 14px;
+    font-size: 14px;
+    color: 	#DAA520;
+    border: 2px solid 	#DAA520;
+    line-height: 12px;
+    top: 5px;
+    text-align: center;
+}
+
+.box:before {
+    left: 5px;
+}
+.box:after {
+    right: 5px;
+}
+
+.col-card {
+    margin: auto;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 100%;
+}
+
+.card:hover {
+    box-shadow: 0  8px 16px 0 rgba(0,0,0,0.2);  
+}
+
+.name {
+    padding: 2px 16px;
 }
